@@ -121,6 +121,7 @@ form {
         margin-top:10px;
         width:80%;
 	}
+
 .commentIndication {
     color: red;
     font-size: 12px;
@@ -402,10 +403,9 @@ a.error:hover {
 .iconLink {
     display: block;
     font-size: 10px;
-//   white-space: nowrap;
     text-align:center;
     float: left;
-    margin-left: 5px;
+    margin: 3px;
 }
 
 #menu a:hover {
