@@ -1,3 +1,14 @@
+2005-06-20 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b33
+
+	* Fix: Override in getIconText
+
+	* Change: css class in layout/navmicro.inc
+
+	* Change: css for iconLinks in view_photo.php and removed sorting for actions.
+
+	* Change: replaced "delete comment" under each comment with a little icon to save space.
+		  And css change.
+
 2005-06-19 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b32
 
 	* Change: moved some messages functions into lib/messages.php
@@ -56,9 +67,6 @@
 		  
 	* Change: Added infoline for debug info in html_wrap/wrapper.footer.default
 
-	*
-
-		  
 2005-06-13 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b31
 
 	* Fix: When copying a photo to an album where "add to beginning" is enabled,
